trying to fix contrast errors

--- a/salmonriveradventures/css/small.css
+++ b/salmonriveradventures/css/small.css
@@ -65,6 +65,7 @@ img {
     padding: 0;
     display: flex;
     flex-direction: column;
+    font-weight: bold;
 }
 
 .navigation li {
@@ -162,6 +163,7 @@ td {
 
 .tripheading {
     color: #DE7119;
+    font-weight: bold;
 }
 
 #home-a {
@@ -328,18 +330,7 @@ form input.submitButton {
 }
 
 textarea {
-    font-size: 75%;
     width: 75%;
-}
-
-#thankyou {
-    height: 500px;
-
-}
-
-#thankyoup {
-    font-family: 'Comic Neue', cursive;
-    font-size: 50px;
 }
 
 /*-----------------------------------------------------------------reservations form end---------------------------------------------------------------*/
